# uros-pico-secondary

./: .gitmodules  CMakeLists.txt  README.md  micro_ros.cmake
src/: CMakeLists.txt  In-Progress.txt  actuators.c  actuators.h  controls.c  controls.h  main.c  message_types.h  nav.c  nav.h  pico_ros_usb.h  pins.h  quadrature_encoder.pio  sensors.c  sensors.h  tunables.h  uart_logging.c  uart_logging.h
src/VL53L0X_1.0.4/Api/platform/inc/: vl53l0x_platform.h  vl53l0x_platform_log.h  vl53l0x_types.h
uros_ws/firmware/dev_ws/install/: local_setup.sh  setup.sh
uros_ws/firmware/dev_ws/log/: latest_build
uros_ws/firmware/mcu_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
uros_ws/firmware/mcu_ws/install/cmake/: yamlTargets.cmake
uros_ws/firmware/mcu_ws/log/: latest_build
uros_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
uros_ws/install/micro_ros_agent/lib/: libmicroxrcedds_agent.so.2.4.1
uros_ws/install/micro_ros_agent/lib/micro_ros_agent/: micro_ros_agent
uros_ws/install/micro_ros_agent/share/micro_ros_agent/: local_setup.sh  package.sh
uros_ws/install/micro_ros_msgs/share/micro_ros_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
uros_ws/log/: latest_build
uros_ws/src/mqp_teleop/: package.xml  setup.cfg  setup.py  xbox.config.yaml
uros_ws/src/mqp_teleop/mqp_teleop/: teleop.py
uros_ws/src/teleop_desktop/: package.xml  setup.cfg  setup.py
uros_ws/src/teleop_desktop/teleop_desktop/: publisher_member_function.py
(+456 files in other folders)
